# LLM-Gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  gateway_llm_detailed_plan_v5.md  pyproject.toml  total work done.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 603101e1b90c_day10_rate_limit_stats.py  9e5c10fac9dd_day16_budget_reconciliation.py  a865dc26ed88_bug_fix_max_token.py  a952f6e4f80c_day18_snapshots.py  c3fca3f4f7df_initial_schema.py  f1e1702b7d81_tenants_api_keys_budget_accounts_.py
app/: database.py  main.py
app/api/: deps.py  errors.py  middleware.py
app/api/routes/: completions.py  health.py  stats.py
app/api/schemas/: completion.py  error.py  usage.py
app/application/ports/: budget_store.py  (+5 more)
app/core/: config.py  ids.py  logging.py  middleware.py
app/domain/: auth.py  budget.py  provider.py
app/workers/: reservation_reconciler.py
scratch/: feel_the_api.py  test_budget_reservation_day4.py  test_circuit_breaker_day6.py  test_execute_completion_day5.py  test_imports_day5.py  test_providers_day3.py  test_rate_limiter_day10.py  test_routing_failover_day6.py  test_stats_day10.py  test_stream_day8.py
scripts/: preflight.py  seed_user.py
tests/: conftest.py  test_auth.py  test_budget.py  test_error_contract.py  test_execute_completion.py  test_langfuse_sink.py  test_lifespan.py  test_priority_smoke.py  test_rate_limiter.py  test_routing_engine.py  test_sanitizer.py  test_stream_completion.py  test_usage_ledger.py
tests/contract/: test_groq_provider.py  test_openai_provider.py
(+23 files in other folders)
