[project]
name = "llm-gateway"
version = "0.1.0"
description = "Provider-agnostic LLM Gateway"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "openai>=2.44.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "sqlalchemy[asyncio]>=2.0.51",
    "structlog>=26.1.0",
    "tiktoken>=0.13.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
